TestRepo2/src/objects/Recipe_Brand__c.object
<CustomObject>
    <fields>
        <fullName>Diageo_Brand_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Diageo Brand</label>
        <referenceTo>Diageo_Brand__c</referenceTo>
        <relationshipName>Recipe_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipe_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipName>Recipe_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recipe Product</label>
    <nameField>
        <displayFormat>RBRND-{0000}</displayFormat>
        <label>Recipe Brand ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipe Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>